# Simple-Rust-Raytracer

./: Cargo.toml
rendered/: Thumbs.db
src/: main.rs
src/helper/: mod.rs  ray_tracer.rs
src/structs/: camera.rs  intersection.rs  light.rs  material.rs  mod.rs  object.rs  ray.rs  scene.rs  sphere.rs  vector3.rs  vector4.rs
